--- a/src/second-block/editor.scss
+++ b/src/second-block/editor.scss
@@ -4,6 +4,7 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-bergall-wp-blocks {
+.wp-block-create-block-bergall-wp-blocks,
+.wp-block-create-block-second-block {
 	border: 1px dotted #f00;
 }
