--- a/blocks/animated-paragraph/style.css
+++ b/blocks/animated-paragraph/style.css
@@ -1,12 +1,11 @@
 .animated-paragraph {
-    /* opacity: 0; */
-    transition: opacity 0.5s ease-out;
+    opacity: 1; 
 }
 
 
 .animated-paragraph span {
-    display: inline-block;
+    /* display: inline-block;
     opacity: 0;
     transform: translateY(10px);
-    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out; */
 }
