ajout d'un container pour effets parrallax

--- a/blocks/animated-paragraph/editor.css
+++ b/blocks/animated-paragraph/editor.css
@@ -1,5 +1,4 @@
 .animated-paragraph {
     opacity: 1;
-    background-color: #f5f5f5;
-    outline : 1px dashed;
+    /* outline : 1px dashed; */
 }
