--- a/blocks/image-video-hover/editor.css
+++ b/blocks/image-video-hover/editor.css
@@ -1,4 +1,7 @@
 .image-video-hover--editor{
-    outline: 2px dashed #ccc;
+    line-height: 0;
 }
-
+.wp-block-bergallblocks-image-video-hover.is-selected{
+    outline: 2px dashed #ccc;
+    line-height: 0;
+}
