--- a/blocks/header-minimalist/style.css
+++ b/blocks/header-minimalist/style.css
@@ -1,43 +1,45 @@
-.wp-block-bergalblocks-header-minimalist {
+.wp-block-bergallblocks-header-minimalist {
     max-width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 9999;
+    opacity: 0.4;
 }
 
-.wp-block-bergalblocks-header-minimalist a:hover {
+.wp-block-bergallblocks-header-minimalist ul,
+.wp-block-bergallblocks-header-minimalist ul li {
+    list-style-type: none;
+}
+
+.wp-block-bergallblocks-header-minimalist a:hover {
     cursor: pointer;
 }
 
-.wp-block-bergalblocks-header-minimalist a {
 
-    text-decoration: none;
-}
-
-body :has(.wp-block-bergalblocks-header-minimalist) {
+body :has(.wp-block-bergallblocks-header-minimalist) {
     padding-top: 5rem;
 }
 
-.wp-block-bergalblocks-header-minimalist .header-minimalist__barre {
+.wp-block-bergallblocks-header-minimalist .header-minimalist__barre {
     display: flex;
     position: relative;
     justify-content: space-between;
     align-items: baseline;
     padding: 1rem;
-    /* background-color: #f8f9fa; */
+    z-index: 10;
+    background-color: inherit;
 }
 
-.wp-block-bergalblocks-header-minimalist .header-minimalist__barre .header-minimalist__logo {
+.wp-block-bergallblocks-header-minimalist .header-minimalist__barre .header-minimalist__logo {
     font-size: 24px;
     font-weight: bold;
     color: #343a40;
 }
 
 
-.wp-block-bergalblocks-header-minimalist .header-minimalist__menuburger {
-    background-color: #ffffff;
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger {
     transition: all 0.25s ease-in-out;
     position: absolute;
     width: 100%;
@@ -47,22 +49,27 @@ body :has(.wp-block-bergalblocks-header-minimalist) {
     left: 0;
     top: 0;
     right: 0;
+    background-color: inherit;
     bottom: 0;
 }
 
 .header-minimalist__menuburgerwrapper {
-    /* outline: 1px solid #343a40; */
     position: relative;
     z-index: 9999;
     margin: 6rem 2rem 2rem;
     min-height: 80%;
 }
 
-.wp-block-bergalblocks-header-minimalist .header-minimalist__menuburger[data-open="false"] {
-    display: none;
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger[data-open="false"] {
+    /* display: none; */
+    opacity: 0;
+    transform: translate(0,-100%);
+}
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger a{
+    display: block;
 }
 
-.wp-block-bergalblocks-header-minimalist .header-minimalist__barre .header-minimalist__menu01 ul {
+.wp-block-bergallblocks-header-minimalist .header-minimalist__barre .header-minimalist__menu01 ul {
     display: flex;
     gap: 1rem;
     font-size: 1rem;
@@ -70,23 +77,22 @@ body :has(.wp-block-bergalblocks-header-minimalist) {
 }
 
 
-.wp-block-bergalblocks-header-minimalist .header-minimalist__menuburger .header-minimalist__menu01 ul {
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger .header-minimalist__menu01 ul {
     font-size: 2rem;
     display: flex;
     flex-direction: column;
 
 }
 
-.wp-block-bergalblocks-header-minimalist .header-minimalist__menu02 ul {
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menu02 ul {
     font-size: 1.25rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.wp-block-bergalblocks-header-minimalist .header-minimalist__menu03 ul {
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menu03 ul {
     font-size: 1rem;
-
     padding: 1rem 0;
     flex-wrap: wrap;
     align-items: center;
@@ -95,36 +101,32 @@ body :has(.wp-block-bergalblocks-header-minimalist) {
 }
 
 @media screen and (max-width: 976px) {
-    .wp-block-bergalblocks-header-minimalist .header-minimalist__barre .header-minimalist__menu01 {
+    .wp-block-bergallblocks-header-minimalist .header-minimalist__barre .header-minimalist__menu01 {
         display: none;
     }
 
-    .wp-block-bergalblocks-header-minimalist .header-minimalist__menu03 ul {
+    .wp-block-bergallblocks-header-minimalist .header-minimalist__menu03 ul {
         border-top: 1px solid #c6c9cb;
+        padding: 2rem 0;
     }
 }
 
-@media screen and (min-width: 976px) {
-    .wp-block-bergalblocks-header-minimalist .header-minimalist__barre {
-        /* background-color: red !important; */
-    }
 
-    .wp-block-bergalblocks-header-minimalist .header-minimalist__menuburger .header-minimalist__menu01 {
+@media screen and (min-width: 976px) {
+    .wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger .header-minimalist__menu01 {
         display: none;
     }
 
-    .wp-block-bergalblocks-header-minimalist .header-minimalist__menu02 ul {
+    .wp-block-bergallblocks-header-minimalist .header-minimalist__menu02 ul {
         font-size: 2rem;
     }
 
-    .wp-block-bergalblocks-header-minimalist .header-minimalist__menuburgerwrapper {
+    .wp-block-bergallblocks-header-minimalist .header-minimalist__menuburgerwrapper {
         display: flex;
-        /* outline: 1px solid #343a40; */
         justify-content: space-between;
-        /* align-items: center; */
     }
 
-    .wp-block-bergalblocks-header-minimalist .header-minimalist__menuburgerwrapper>div {
+    .wp-block-bergallblocks-header-minimalist .header-minimalist__menuburgerwrapper>div {
         width: 100%;
         align-items: center;
 
@@ -144,4 +146,76 @@ body :has(.wp-block-bergalblocks-header-minimalist) {
         /* background-color: aqua; */
     }
 
+}
+
+/* button menu */
+.header-minimalist__button {
+    background-color: inherit;
+    color: inherit;
+    border-radius: 30px;
+    padding: 0.25rem 1rem;
+    border: none;
+}
+
+.ButtonMenu {
+    display: flex;
+    font-size: 1rem;
+    gap: 0.5rem;
+    align-items: center;
+    transition: all 150ms ease;
+    cursor: pointer;
+}
+
+.ButtonMenu:hover, .ButtonMenu:focus{
+    background-color: rgb(0,0,0,0.2);
+    border: none;
+    outline: 0;
+}
+
+.ButtonMenu__icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 2rem;
+    width: 2rem;
+}
+
+.ButtonMenu[data-open="true"] .ButtonMenu__icon span:nth-child(2) {
+    opacity: 0;
+}
+.ButtonMenu[data-open="true"] .ButtonMenu__icon span:nth-child(1){
+    transform: rotate(45deg) translate(0.26rem, 0.26rem  );
+}
+.ButtonMenu[data-open="true"] .ButtonMenu__icon span:nth-child(3){
+    transform: rotate(-45deg) translate(0.26rem, -0.27rem );
+}
+
+.ButtonMenu__icon span {
+    margin: 2px 0;
+    background-color: #000000;
+    display: flex;
+    width: 1rem;
+    height: 2px;
+    border-radius: 5px;
+    transition: all 150ms ease;
+}
+
+
+/* animation */
+.wp-block-bergallblocks-header-minimalist li a {
+    text-decoration: none;
+}
+
+.wp-block-bergallblocks-header-minimalist li {
+    transition: all 125ms ease;
+    padding: 0.25rem;
+    opacity: 0.8;
+
+}
+
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger li.wp-block-navigation-link:hover {
+    transform: translate(0.25rem, 0);
+    opacity: 1;
+    display: block;
 }
