--- a/blocks/header-minimalist/style.css
+++ b/blocks/header-minimalist/style.css
@@ -1,8 +1,7 @@
-
-
 .admin-bar .wp-block-bergallblocks-header-minimalist {
-    top:32px;
+    top: 32px;
 }
+
 .wp-block-bergallblocks-header-minimalist {
     max-width: 100%;
     position: fixed;
@@ -29,18 +28,15 @@ body:not(.block-editor-iframe__body) :has(.wp-block-bergallblocks-header-minimal
 }
 
 .wp-block-bergallblocks-header-minimalist .header-minimalist__barre .header-minimalist__logo {
-    font-size: 24px;
-    font-weight: bold;
-    color: #343a40;
-}
+    text-decoration: none;
 
+}
 
 
 .wp-block-bergallblocks-header-minimalist .header-minimalist__barre .header-minimalist__logo img {
     display: flex;
     align-items: center;
     height: 3rem;
-    outline: 1px solid;
     flex-shrink: 0;
 }
 
@@ -53,14 +49,16 @@ body:not(.block-editor-iframe__body) :has(.wp-block-bergallblocks-header-minimal
     cursor: pointer;
 }
 
-.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger{
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger {
     width: 100%;
     z-index: -1;
     height: 100vh;
     overflow: auto;
+    background-color: #fff;
     background-color: inherit;
 }
-body:not(.block-editor-iframe__body)  .wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger {
+
+body:not(.block-editor-iframe__body) .wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger {
     position: absolute;
     left: 0;
     top: 0;
@@ -78,19 +76,15 @@ body:not(.block-editor-iframe__body)  .wp-block-bergallblocks-header-minimalist 
 }
 
 .wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger[data-open="false"] {
-    /* display: none; */
     opacity: 0;
     transform: translate(0, -100%);
 }
 
-.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger.admin[data-open="false"]{
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger.admin[data-open="false"] {
     opacity: 1;
     transform: translate(0, 0);
 }
 
-.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger a {
-    display: block;
-}
 
 .wp-block-bergallblocks-header-minimalist .header-minimalist__barre .header-minimalist__menu01 ul {
     display: flex;
@@ -102,25 +96,33 @@ body:not(.block-editor-iframe__body)  .wp-block-bergallblocks-header-minimalist 
 
 .wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger .header-minimalist__menu01 ul {
     font-size: 2rem;
+    /* font-size: clamp(2rem, 10vw, 3rem); */
     display: flex;
+    gap: 1.5rem;
     flex-direction: column;
+    line-height: 1em;
 
 }
 
 .wp-block-bergallblocks-header-minimalist .header-minimalist__menu02 ul {
-    font-size: 1.25rem;
+    font-size: 1.75rem;
+    /* font-size: clamp(1.5rem, 10vw, 2.5rem); */
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1em;
+    line-height: 1em;
+
 }
 
 .wp-block-bergallblocks-header-minimalist .header-minimalist__menu03 ul {
     font-size: 1rem;
-    padding: 1rem 0;
+    /* font-size: clamp(1.2rem, 10vw, 1.75rem); */
+    padding: 1em 0;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 1em;
+    line-height: clamp(1.7rem, 10vw, 1.2rem);
 }
 
 @media screen and (max-width: 976px) {
@@ -147,10 +149,9 @@ body:not(.block-editor-iframe__body)  .wp-block-bergallblocks-header-minimalist 
     }
 
     .wp-block-bergallblocks-header-minimalist .header-minimalist__menu02 ul {
-        font-size: 2rem;
+        font-size: 2r;
     }
 
- 
 
     .wp-block-bergallblocks-header-minimalist .header-minimalist__menuburgerwrapper>div {
         width: 100%;
@@ -161,7 +162,6 @@ body:not(.block-editor-iframe__body)  .wp-block-bergallblocks-header-minimalist 
     .header-minimalist__menuburgerwrapper .header-minimalist__menu02 {
         display: flex;
         justify-content: center;
-        /* border-right: 1px solid #343a40; */
     }
 
     .header-minimalist__menuburgerwrapper .header-minimalist__menu03 {
@@ -169,7 +169,6 @@ body:not(.block-editor-iframe__body)  .wp-block-bergallblocks-header-minimalist 
         justify-content: center;
         border-top: none;
         align-content: center;
-        /* background-color: aqua; */
     }
 
 }
@@ -193,9 +192,8 @@ body:not(.block-editor-iframe__body)  .wp-block-bergallblocks-header-minimalist 
 }
 
 .ButtonMenu:hover, .ButtonMenu:focus {
-    background-color: rgb(0, 0, 0, 0.2);
-    border: none;
-    outline: 0;
+    /* background-color: rgb(0, 0, 0, 0.2); */
+    outline: 2px solid;
 }
 
 .ButtonMenu__icon {
@@ -225,25 +223,52 @@ body:not(.block-editor-iframe__body)  .wp-block-bergallblocks-header-minimalist 
     display: flex;
     width: 1rem;
     height: 2px;
-    border-radius: 5px;
     transition: all 150ms ease;
 }
 
 
-/* animation */
-.wp-block-bergallblocks-header-minimalist li a {
+/* animation Liens */
+
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger a {
+    display: inline-block;
+}
+
+.wp-block-bergallblocks-header-minimalist li.wp-block-navigation-link a {
     text-decoration: none;
-}
-
-.wp-block-bergallblocks-header-minimalist li {
     transition: all 125ms ease;
-    padding: 0.25rem;
-    opacity: 0.8;
-
+    padding: 0.20rem;
+    position: relative;
+    display: flex;
 }
 
-.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger li.wp-block-navigation-link:hover {
+.wp-block-bergallblocks-header-minimalist li.wp-block-navigation-link {
+    margin-bottom: 0px
+}
+
+.wp-block-bergallblocks-header-minimalist li.wp-block-navigation-link {
+    display: flex;
+    flex-direction: column;
+}
+
+.wp-block-bergallblocks-header-minimalist .header-minimalist__menuburger li.wp-block-navigation-link a:hover {
     transform: translate(0.25rem, 0);
     opacity: 1;
+}
+
+.wp-block-bergallblocks-header-minimalist li.wp-block-navigation-link a span {
     display: block;
+}
+
+.wp-block-bergallblocks-header-minimalist li.wp-block-navigation-link a span:after {
+    content: " ";
+    display: block;
+    height: 1px;
+    background-color: #000000;
+    width: 0%;
+    position: relative;
+    transition: all 400ms ease;
+}
+
+.wp-block-bergallblocks-header-minimalist li.wp-block-navigation-link a:hover span:after {
+    width: 100%;
 }
