--- a/blocks/circle-text/editor.css
+++ b/blocks/circle-text/editor.css
@@ -1,30 +1,57 @@
-
-
-.circle-text-container ,
 .wp-block-animablocks-circle-text {
-    width: fit-content;
+    /* min-height: 2px;
+    background-color: green; */
 }
 
+.wp-block img:not([draggable]),
+.wp-block svg:not([draggable]) {
+    pointer-events: all;
+}
 
 
 .circle-text-wrapper {
-    /* overflow: hidden; */
-    width: fit-content;
-    cursor: move;
-
-    /* border: 5px solid goldenrod; */
+    position: relative;
 }
 
-.circle-text-wrapper svg {
-    height: auto;
+.wp-block-animablocks-circle-text.aligncenter .circle-text-svg {
+    margin: auto;
+    display: block;
+
 }
 
-
-.circle-text-wrapper svg {
+.circle-text-wrapper .circle-text-svg {
     width: max-content;
     animation: circle-text-keyframe var(--speed, 20s) linear infinite var(--direction, forwards);
-
+    z-index: 999;
+    transition: scale .2s;
 }
+
+.circle-text-wrapper .circle-text-svg:hover {
+    outline: 2px dotted rgb(71, 122, 197);
+}
+
+.circle-text-wrapper .drag-handle {
+    opacity: .0;
+    scale: .5;
+    color: green;
+    font-size: 45px;
+    margin: -20px 0 0 -20px;
+    transition: scale .2s;
+    z-index: 999;
+    cursor: pointer;
+}
+.circle-text-wrapper .drag-handle svg {
+    width: 40px;
+}
+
+.circle-text-wrapper .circle-text-svg:hover + .drag-handle,
+.circle-text-wrapper .drag-handle:hover {
+    opacity: 1;
+    scale: 1.2;
+    color: rgb(69, 8, 94);
+}
+ 
+
 
 @keyframes circle-text-keyframe {
     from {
