--- a/blocks/slider-image/style.css
+++ b/blocks/slider-image/style.css
@@ -1,18 +1,18 @@
-.wp-block-anima-slider-image {
+.anima-slider-image {
     position: relative;
 }
 
-.wp-block-anima-slider-image {
+.anima-slider-image {
     overflow: hidden;
     width: auto;
 }
 
-.wp-block-anima-slider-image .swiper-slide img {
+.anima-slider-image .swiper-slide img {
     width: 100%;
     height: auto;
     object-fit: cover;
 }
 
-.wp-block-anima-slider-image img {
+.anima-slider-image img {
     line-height: 0;
 }
