--- a/src/components/navigation-swiper/style.css
+++ b/src/components/navigation-swiper/style.css
@@ -84,8 +84,8 @@
 .slidernav .pagination-bullet,
 .slidernav .swiper-pagination-bullet {
     display: inline-flex;
-    width: 1rem;
-    height: 1rem;
+    width: .5rem;
+    height: .5rem;
     border-radius: 50%;
     background: var(--wp--preset--color--contrast);
     opacity: 1;
@@ -94,7 +94,7 @@
 }
 
 .slidernav .swiper-pagination-bullet-active {
-    background: black;
+    background: rgba(0, 0, 0, 0.3);
     opacity: 1;
     border-radius: 50%;
 }
