--- a/blocks/container-parallax/editor.css
+++ b/blocks/container-parallax/editor.css
@@ -1,21 +1,10 @@
-.animated-text {
+.parallax-content{
+    padding: .5rem;
     border: 2px dashed #dedede;
     border-radius: 1rem;
-    padding: .5rem;
-    line-height: auto;
-    background: transparent;
 }
-
-.block-editor-block-list__block.is-selected .animated-text {
-    border: 2px dashed blue;
-}
-
-.animated-text span {
-  display: inline-block;
-}
-
-.animated-text::before{
-    content: "Anima - Animated Text Block";
+.parallax-content::before{
+    content: "Anima - Container Parallax Block";
     position: absolute;
     top: 0;
     left: 50%;
