--- a/blocks/animate-on-scroll/editor.css
+++ b/blocks/animate-on-scroll/editor.css
@@ -9,3 +9,19 @@
 .is-selected.animate-on-scroll-editor {
     border-color:  blue;
 }
+
+
+.animate-on-scroll-editor::before{
+    content: "Anima - Animated Text Block";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    font-size: .75rem;
+    transform: translate(-50%, 0);
+    color: white;
+    background-color: #999;
+    padding: .1rem .25rem;
+    font-family: 'Courier New', Courier, monospace;
+    pointer-events: none;
+    border-radius:  0 0 .25rem .25rem;
+}
