updates changement slider gallerie

--- a/src/test/editor.scss
+++ b/src/test/editor.scss
@@ -4,6 +4,6 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-anima-test {
+.wp-block-animablocks-test {
 	border: 1px dotted #f00;
 }
